Intellij code fixes